--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
-    "@wagmi/core": "^1.4.12",
+    "@wagmi/core": "2.5.5",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -72,8 +72,8 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
-    "viem": "^2.22.17",
-    "wagmi": "^1.4.12",
+    "viem": "^2.7.8",
+    "wagmi": "^2.5.5",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
