--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "@radix-ui/react-tooltip": "^1.1.3",
     "@replit/vite-plugin-shadcn-theme-json": "^0.0.4",
     "@tanstack/react-query": "^5.60.5",
-    "@wagmi/core": "^1.4.13",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -53,6 +52,7 @@
     "drizzle-orm": "^0.38.4",
     "drizzle-zod": "^0.6.0",
     "embla-carousel-react": "^8.3.0",
+    "ethers": "^6.13.5",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "framer-motion": "^11.18.2",
@@ -72,8 +72,6 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.0",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13",
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
