--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "input-otp": "^1.2.4",
     "ipfs-http-client": "^60.0.1",
     "lucide-react": "^0.453.0",
+    "node-fetch": "^3.3.2",
     "openai": "^4.82.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
